; ModuleID = '/home/carl/AnghaBench/libgit2/tests/core/extr_ftruncate.c__extend.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/core/extr_ftruncate.c__extend.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.stat = type { i64 }

@fd = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i64)* @_extend to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @_extend(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca %struct.stat, align 8
  %4 = alloca i32, align 4
  store i64 %0, i64* %2, align 8
  %5 = load i32, i32* @fd, align 4
  %6 = load i64, i64* %2, align 8
  %7 = call i32 @p_ftruncate(i32 %5, i64 %6)
  store i32 %7, i32* %4, align 4
  %8 = icmp eq i32 %7, 0
  %9 = zext i1 %8 to i32
  %10 = call i32 @cl_assert(i32 %9)
  %11 = load i32, i32* @fd, align 4
  %12 = call i32 @p_fstat(i32 %11, %struct.stat* %3)
  store i32 %12, i32* %4, align 4
  %13 = icmp eq i32 %12, 0
  %14 = zext i1 %13 to i32
  %15 = call i32 @cl_assert(i32 %14)
  %16 = getelementptr inbounds %struct.stat, %struct.stat* %3, i32 0, i32 0
  %17 = load i64, i64* %16, align 8
  %18 = load i64, i64* %2, align 8
  %19 = icmp eq i64 %17, %18
  %20 = zext i1 %19 to i32
  %21 = call i32 @cl_assert(i32 %20)
  ret void
}

declare dso_local i32 @cl_assert(i32) #1

declare dso_local i32 @p_ftruncate(i32, i64) #1

declare dso_local i32 @p_fstat(i32, %struct.stat*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
